style.css
/* ... */
/* input, button { */
    /* max-height: 0.6rem; */
    /* overflow-y: auto; */
    /* position: relative;
    bottom: 5px; */
/* } */

.description, .description-checked {
    /* border: 1px solid black; */
    box-sizing: border-box;
    padding-top: 2px;
    height: 1.35rem;
    position: relative;
    right: 2rem;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-size: calc(0.8rem + 0.2vw);
    flex-shrink: 0.9;
}

.description-checked {
    color: rgb(129, 123, 123);
    font-weight: bold;
}

.check, .checkall {
    margin-right: 10px;
    border: 1px solid black;
    height: 1rem;
    min-width: 1rem;
    display: inline-block;
    border-radius: 5px;
    margin-left: 2px;
}

.checkallcontainer {
    margin-right: 10px;
    width: 1.3rem;
    height: 1.3rem;
    /* display: flex; */
    /* align-items: center; */
    /* border: 1px solid red; */
}

.checkall {
    border: 2px solid darkgrey;
    margin-right: 0;
    margin-left: 0;
}

.checkall:hover {
    border: 1px solid black;
    position: relative;
    left: 1px;
    cursor: default;
}

.checkcounter {
    /* border: 1px solid black; */
    min-width: 4.4rem;
    height: 1rem;
    font-size: 0.8rem;
    /* width: 1rem; */
}

.span1, .span2, .span3 {
    display: inline-block;
    min-width: 1.25rem;
        /* 1.25rem equivalent to 20px */
    vertical-align: middle;
    /* border: 1px solid red; */
}
 .span1 {
     text-align: end;
     padding-right: 4px;
 }
.emptyspace {
    width: 30vw;
    /* border: 1px solid black; */
}

.percentage {
    /* border: 1px solid black; */
    width: 70px;
    text-align: end;
    font-size: calc(0.8rem + 0.2vw);
}

/* .button-edit, .button-delete .input-description {
    position: relative;
    right: 4rem;
} */

.input-description, .button-edit {
    position: relative;
    right: 2rem;
    font-size: calc(0.8rem + 0.2vw);
}

.check:hover {
    background-color: brown;
    cursor: default;
}

.check:active {
    /* background-color: violet; */
    top: 1px;
    cursor: default;
}

.descriptionNumber {
    position: relative;
    right: 4rem;
    text-align: right;
    /* border: solid black 1px; */
    width: 1.5rem;
    min-width: 1.5rem;
    color: peachpuff;
    padding-right: 9px;
    /* line-height: 25px;     */
}

/* .descriptionNumber:hover {
    background-color: peachpuff;
    color: black;
    cursor: default;
} */

@media  only screen and (max-width: calc(71rem)) {
    header {
        flex-wrap: wrap;
    }

    .header-block {
        width: 100%;
    }

    /* #header-block-1 {
        min-width: 0;
    } */

    #blocks-container {
        padding-top: calc(15rem + 2px);
             /* habilitado si "header" posee position fixed */
    }
}

@media  only screen and (max-width: 480px) {

    /* .header-block {
        width: 100%;
    }

    #blocks-container {
        padding-top: calc(15rem + 2px);
    } */

    .descriptionNumber {
        color: black !important;
    }
}

